[gd_scene load_steps=2 format=2]

[ext_resource path="res://Runner.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 500.0
margin_bottom = 536.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Day1Part1" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 20.0
text = "Day 1 Part 1"

[node name="Day1Part2" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 500.0
margin_bottom = 44.0
text = "Day 1 Part 2"

[node name="Day2Part1" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 500.0
margin_bottom = 68.0
text = "Day 2 Part 1"

[node name="Day2Part2" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 500.0
margin_bottom = 92.0
text = "Day 2 Part 2"

[node name="Day3Part1" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 500.0
margin_bottom = 116.0
text = "Day 3 Part 1"

[node name="Day3Part2" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 500.0
margin_bottom = 140.0
text = "Day 3 Part 2"

[node name="Day4Part1" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 500.0
margin_bottom = 164.0
text = "Day 4 Part 1"

[node name="Day4Part2" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 500.0
margin_bottom = 188.0
text = "Day 4 Part 2"

[node name="Day5Part1" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 500.0
margin_bottom = 212.0
text = "Day 5 Part 1"

[node name="Day5Part2" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 500.0
margin_bottom = 236.0
text = "Day 5 Part 2"

[node name="Day6Part1" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 500.0
margin_bottom = 260.0
text = "Day 6 Part 1"

[node name="Day6Part2" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 500.0
margin_bottom = 284.0
text = "Day 6 Part 2"

[node name="Day7Part1" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 500.0
margin_bottom = 308.0
text = "Day 7 Part 1"

[node name="Day7Part2" type="Button" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 500.0
margin_bottom = 332.0
text = "Day 7 Part 2"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Input" type="TextEdit" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 500.0
margin_bottom = 526.0
size_flags_horizontal = 3

[node name="Output" type="TextEdit" parent="VBoxContainer"]
margin_top = 540.0
margin_right = 1004.0
margin_bottom = 580.0
rect_min_size = Vector2( 0, 40 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day1Part1" to="." method="_on_Day1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day1Part2" to="." method="_on_Day1Part2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day2Part1" to="." method="_on_Day2Part1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day2Part2" to="." method="_on_Day2Part2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day3Part1" to="." method="_on_Day3Part1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day3Part2" to="." method="_on_Day3Part2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day4Part1" to="." method="_on_Day4Part1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day4Part2" to="." method="_on_Day4Part2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day5Part1" to="." method="_on_Day5Part1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day5Part2" to="." method="_on_Day5Part2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day6Part1" to="." method="_on_Day6Part1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day6Part2" to="." method="_on_Day6Part2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day7Part1" to="." method="_on_Day7Part1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Day7Part2" to="." method="_on_Day7Part2_pressed"]
